Fix: mask console logs and add error notif on wrong creds

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,7 +59,7 @@
 
   <!--  Top text boxes-->
   <div class="topText">
-    <h1 style="font-weight: bold; text-align: center">Everlook Calendar</h1>
+    <h1 style="font-weight: bold; text-align: center">Turtle Calendar</h1>
     <br />
 
     <div class="block_container" style="margin-bottom: 20px">
