--- a/src/app/event/event.component.scss
+++ b/src/app/event/event.component.scss
@@ -94,12 +94,48 @@ a:hover {
   color: darkgray;
   justify-self: center; // this doesn't work in firefox apparently
   text-align: center;
-  padding-inline-end: 40px; // to componsate for the ul shift
+  // padding-inline-end: 40px; // to componsate for the ul shift
 }
 #wrapper {
   margin: 0 auto;
   width: calc(100% - 80px);
   max-width: 800px;
+}
+.load-holder {
+  justify-self: center;
+  margin-top: 2rem;
+  position: fixed;
+  width: -webkit-fill-available;
+}
+.load-event {
+  display: flex;
+  justify-content: center;
+}
+.load-event-left {
+  // padding-top: 1rem;
+  position: relative;
+  left: 0.3rem;
+}
+.load-event-right {
+  // padding-top: 1rem;
+  position: relative;
+  right: -1rem;
+}
+.load-event-mid {
+  gap: 0.1rem;
+  display: flex;
+  flex-direction: column;
+}
+.load-dot {
+  margin-bottom: -1rem;
+}
+.load-trail {
+  align-self: center;
+  margin-bottom: -0.9rem;
+}
+.load-subject {
+  display: flex;
+  width: 16rem;
 }
 
 @media only screen and (max-width: 587px) {
@@ -121,5 +157,34 @@ a:hover {
     font-size: small;
     width: 170px;
     left: 25px;
+  }
+  .load-holder {
+    justify-self: center;
+    margin-top: 2rem;
+    position: fixed;
+    width: -webkit-fill-available;
+  }
+  .load-event {
+    display: flex;
+    justify-content: center;
+  }
+  .load-event-left {
+    padding-top: 1rem;
+    position: relative;
+    left: -1.7rem;
+  }
+  .load-event-right {
+    padding-top: 1rem;
+    position: relative;
+    right: -1rem;
+  }
+  .load-event-mid {
+    gap: 0.1rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .load-subject {
+    display: flex;
+    width: 11rem;
   }
 }
