--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,7 +11,6 @@ a.linkButton {
 }
 
 .linkButton::ng-deep {
-
   .mat-mdc-button-ripple,
   .mdc-button__ripple {
     display: none !important;
@@ -41,7 +40,6 @@ a.linkButton {
 }
 
 @media only screen and (max-width: 518px) {
-
   /* to make the page display correctly on phones */
   .topText {
     //position: relative;
@@ -49,12 +47,10 @@ a.linkButton {
     //margin-top: 10px;
     //padding: 25px 0 0 50px;
   }
-
 }
 
-
 .mat-icon {
-  scale: 1.5
+  scale: 1.5;
 }
 
 .button-container {
@@ -76,10 +72,10 @@ a.linkButton {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap-reverse;
+  background-color: transparent;
 }
 
 .mode-tog {
-
   z-index: 2;
   transition: 1000ms;
 }
@@ -111,7 +107,7 @@ a.linkButton {
   width: 550vw;
   height: 350vw;
   border-radius: 50%;
-  background-color: #2d2d2d;
+  background-color: #252525;
   transition: 500ms ease-in-out;
   display: flex;
   z-index: -1;
@@ -121,7 +117,6 @@ a.linkButton {
 .dark-mode.active {
   transform: scale(1);
   transition: 500ms ease-in-out;
-
 }
 
 .configButton {
@@ -141,7 +136,6 @@ a.linkButton {
   }
 }
 
-
 @media screen and (max-width: 600px) {
   .dark-mode {
     width: 250vh;
@@ -149,7 +143,7 @@ a.linkButton {
   }
 
   .button-container {
-    transform: scale(.8);
+    transform: scale(0.8);
     padding: 10px 0 0 0;
   }
 }
