Fix: try and reduce file size

--- a/src/app/event/event.component.scss
+++ b/src/app/event/event.component.scss
@@ -94,6 +94,7 @@ a:hover {
   color: darkgray;
   justify-self: center; // this doesn't work in firefox apparently
   text-align: center;
+  font-weight: bold;
   // padding-inline-end: 40px; // to componsate for the ul shift
 }
 #wrapper {
