Fix: better password check, better backbtn properties

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,6 +14,7 @@
           #emailInput
           (input)="checkMailInput(emailInput)"
           [ngModelOptions]="{ standalone: true }"
+          required
         />
       </mat-form-field>
 
@@ -44,7 +45,7 @@
           [(ngModel)]="credentials.password"
           (focusin)="passwordFocused()"
           (focusout)="passwordUnFocused()"
-          #required
+          required
           #pwdInput
         />
       </mat-form-field>
