Fix: back button triggering on password Enter

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -81,6 +81,7 @@
         <button
           mat-icon-button
           class="backBtn"
+          type="button"
           (click)="goBack()"
           [matTooltip]="goBackTip"
         >
